[package]
name = "cartesi_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
hex = "0.4.3"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
serde_json = "1.0.100"
futures = "0.3.28"
async-std = { version = "1.12", features = ["attributes", "tokio1" ] }
sqlite = "0.32.0"
cid = "0.11.0"
base64 = "0.21.5"
rs-car-ipfs = { git = "https://github.com/zippiehq/rs-car-ipfs" }
rs-car = "0.4.1"
sha2 = "0.10.8"
hyper-tls = "0.5.0"
serde = "1.0.163"
tracing-subscriber = "0.3.18"
serde-error = "0.1.2"
rand = "0.8.5"

[features]
measure_execution_time = []
