[package]
name = "celestia_stubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = {version = "0.18.2", features=["jsonrpsee-http-client"]}
serde = "1.0.163"
derive_builder = "0.12.0"
serde_json = "1.0.107"
