[package]
name = "lambada-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.11.0"
cartesi-machine-json-rpc = {git = "https://github.com/cartesi/machine-json-rpc" }
serde_json = "1.0.100"
hyper = { version = "0.14", features = ["full"] }
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
serde = "1.0.163"
async-std = { version = "1.12", features = ["attributes"] }
serde-error = "0.1.2"
nix = { version = "0.28.0", features = ["process"] }
tracing = "0.1"
base64 = "0.21.5"
hex = "0.4.3"
sha2 = "0.10.8"
rs-car-ipfs = { git = "https://github.com/zippiehq/rs-car-ipfs" }
rs-car = "0.4.1"
futures = "0.3.28"
os_pipe = {version = "1.1.5", features = ["io_safety"]}
polling = "3.5.0"
rand = "0.8.5"
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1" }