[package]
name = "lambada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.4" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.4" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish" }

async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1" }
ethers = { version = "2.0.4", features = ["ws"] }
hotshot-query-service = { git = "https://github.com/EspressoSystems/hotshot-query-service", branch = "main" }
contract-bindings = { git = "https://github.com/EspressoSystems/espresso-sequencer" }
serde = "1.0.163"
clap = "4.3.10"
futures = "0.3.28"
async-std = { version = "1.12", features = ["attributes"] }
cartesi_lambda = {path = "../cartesi_lambda"}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
hex = "0.4.3"
cartesi-machine-json-rpc = {git = "https://github.com/cartesi/machine-json-rpc" }
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer" }
hyper-tls = "0.5.0"
bincode = "1.3.3"
serde_json = "1.0.107"
sqlite = "0.32.0"
cid = "0.11.0"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
base64 = "0.21.5"
jsonrpsee = {version = "0.18.2", features=["jsonrpsee-http-client"]}
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }