[package]
name = "lambada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.4" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.4" }

async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1" }
ethers = { version = "2.0.4", features = ["ws"] }
contract-bindings = { git = "https://github.com/EspressoSystems/espresso-sequencer" }
serde = "1.0.163"
clap = "4.3.10"
futures = "0.3.28"
async-std = { version = "1.12", features = ["attributes"] }
cartesi_lambda = {path = "../cartesi_lambda", features = ["measure_execution_time"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
hex = "0.4.3"
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer" }
hyper-tls = "0.5.0"
bincode = "1.3.3"
serde_json = "1.0.107"
sqlite = "0.32.0"
cid = "0.11.0"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }
rand = "0.8"
sha256 = "1.4.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
base64 = "0.21.7"
commit = { git = "https://github.com/EspressoSystems/commit" }
ark-serialize = "0.4.2"
tokio-test = "0.4.4"
serial_test = "3.0.0"
sequential-test = "0.2.4"
[[test]]
name = "lambada_test"
path = "tests/lambada_test.rs"