[package]
name = "lambada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"]}
serde = { version = "1.0.163", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive", "env", "string"] }
futures = "0.3.28"
async-std = { version = "1.12", features = ["attributes"] }
cartesi_lambda= {path = "../cartesi_lambda", features = ["measure_execution_time"]}

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
hex = "0.4.3"
hyper-tls = "0.5.0"
bincode = "1.3.3"
serde_json = "1.0.107"
sqlite = {version = "0.32.0", optional = true }
sqlite_no_default = {package = "sqlite", version = "0.32.0", optional = true, default-features = false }

cid = "0.11.0"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
rand = "0.8"
sha256 = "1.4.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
base64 = "0.21.7"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.4" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.4" }
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }
committable = { git = "https://github.com/EspressoSystems/commit" }
ark-serialize = "0.4.2"
tokio-test = "0.4.4"
sequential-test = "0.2.4"
derive_more = "0.99.17"
base64-bytes = "0.1"
os_pipe = {version = "1.1.5", features = ["io_safety"]}
nix = { version = "0.28.0", features = ["process"] }

[features]
default = ["sqlite"]
no_sqlite = ["sqlite_no_default"]

[[test]]
name = "lambada_test"
path = "tests/lambada_test.rs"