[package]
name = "subscribe-avail"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
avail-subxt = { git = "https://github.com/availproject/avail", rev = "89b7fc7406dcb1146c59ab9e47901408dc8240fb" }
avail-base = { git = "https://github.com/availproject/avail", rev = "89b7fc7406dcb1146c59ab9e47901408dc8240fb"  }

os_pipe = {version = "1.1.5", features = ["io_safety"]}
nix = { version = "0.28.0", features = ["process"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"] }
async-std = { version = "1.12", features = ["attributes", "tokio1" ] }
tracing = "0.1"
log = "0.4.14"
rand = "0.8.5"
subxt = "0.34"

structopt = "0.3.25"
tokio = { version = "1.21.2", features = ["process", "fs", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3.25"
hex = "0.4"
serde = { version = "1.0.195", features = ["derive", ] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

hyper = { version = "0.14", features = ["full"] }
sha3 = "0.10.8"
cid = "0.11.0"
bincode = "1.3.3"
sqlite = "0.32.0"
parity-scale-codec = "3.6.12"
lambada = {path = "../lambada"}
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
futures-util = "0.3.28"