[package]
name = "subscribe-celestia-blocks"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ethers = "2.0.14"
celestia-rpc = {git = "https://github.com/eigerco/lumina", tag = "lumina-node-v0.3.1"}
celestia-types = { git = "https://github.com/eigerco/lumina", tag = "lumina-node-v0.3.1"}
async-std = { version = "1.12", features = ["attributes"] }
hex = "0.4.3"
sha3 = "0.10.8"
cid = "0.11.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.32.0"
tracing = "0.1"
bincode = "1.3.3"
hyper = { version = "0.14", features = ["full"] }
os_pipe = {version = "1.1.5", features = ["io_safety"]}
nix = { version = "0.28.0", features = ["process"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"] }
lambada = {path = "../lambada"}

