[package]
name = "subscribe-celestia"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }
async-std = { version = "1.12", features = ["attributes"] }
hex = "0.4.3"
sha3 = "0.10.8"
cid = "0.11.0"
tokio = { version = "1", features = ["full"] }
sqlite = "0.32.0"
tracing = "0.1"
bincode = "1.3.3"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.107"
os_pipe = {version = "1.1.5", features = ["io_safety"]}
nix = { version = "0.28.0", features = ["process"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"] }
lambada = {path = "../lambada"}
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync"], default-features = false }
futures-util = "0.3.28"
