[package]
name = "subscribe-espresso"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sequencer = { git = "https://github.com/EspressoSystems/espresso-sequencer", tag= "20240603", features = ["testing"]}
sqlite =  { version = "0.36.0", default-features = false }
tracing = "0.1"
async-std = { version = "1.12", features = ["attributes"] }
hex = "0.4.3"
surf-disco = "0.6"
cid = "0.11.0"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.107"
bincode = "1.3.3"
tide-disco = "0.6"
tokio = { version = "1.37", features = ["full"] }
serde = "1.0.163"
sha3 = "0.10.8"
hotshot-query-service = { git = "https://github.com/EspressoSystems/hotshot-query-service", tag = "0.1.25" }
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.3" }
ark-serialize = "0.4.2"
os_pipe = {version = "1.1.5", features = ["io_safety"]}
nix = { version = "0.28.0", features = ["process"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"] }
lambada = {path = "../lambada", default-features = false, features = ["no_sqlite"]}