[package]
name = "subscribe-evm-da"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bincode = "1.3.3"
hyper = { version = "0.14", features = ["full"] }
hex = "0.4.3"
ethers = { version = "2.0.4", features = ["ws"] }
sqlite = "0.32.0"
tracing = "0.1"
serde = "1.0.163"
cid = "0.11.0"
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
serde_json = "1.0.107"
os_pipe = {version = "1.1.5", features = ["io_safety"]}
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.4.1", features = ["logging-utils"] }
nix = { version = "0.28.0", features = ["process"] }