[package]
name = "wasm_pay_for_blobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
celestia-proto = "0.1.1"
prost = "0.12.3"
celestia-types = "0.1.1"
prost-types = "0.12.3"
celestia-tendermint-proto = "0.32.1"