[package]
name = "celestia"
description = "JSON-RPC Client"
license = "Apache-2.0"
version = "0.11.0"
authors = [
  "Zachary Belford <belfordz66@gmail.com>",
  "Mike Lubinets <public@mersinvald.me>"
]
edition = "2018"

[dependencies]
jsonrpsee = {version = "0.18.2", features=["client-core"]}

serde_json = "1.0"
derive_builder = "0.12.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[dev-dependencies]
futures = "0.1.25"
failure = "0.1.5"

  [dev-dependencies.autorand]
  version = "0.2.2"
  features = [ "json", "json-value-always-null", "limited-integers" ]
